--- a/src/resource/views/search.hbs
+++ b/src/resource/views/search.hbs
@@ -1,5 +1,5 @@
 <div class="mt-2">
-    <form method="POST" action="">
+    <form method="GET" action="">
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Search everything</label>
             <input type="text" name="q" class="form-control" id="search-input" placeholder="key word">
