--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -14,7 +14,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link active dropdown-toggle nav_link__top text-white" href="#" id="navbarDropdown"
                         role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
+                        More
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/all/uploaded/members">All Members</a></li>
