--- a/src/resource/views/all/trash-members.hbs
+++ b/src/resource/views/all/trash-members.hbs
@@ -43,7 +43,7 @@
                         <input class="form-check-input" type="checkbox" name="memberIds[]" value="{{this._id}}">
                     </div>
                 </td>
-                <th scope="row">{{sum @index 1}}</th>
+                <th scope="row">{{this._id}}</th scope="row">
                 <td>{{this.name}}</td>
                 <td>{{this.price}}</td>
                 <td>{{this.deletedAt}}</td>
