--- a/src/resource/views/all/uploaded-members.hbs
+++ b/src/resource/views/all/uploaded-members.hbs
@@ -9,12 +9,6 @@
         </a>
     </div>
     <div class="mt-1 d-flex align-items-center">
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="select-all">
-            <label class="form-check-label" for="select-all">
-                Select all
-            </label>
-        </div>
         <select class="form-select form-control-sm form_control__weight" aria-label="Default select example"
             name="action" required>
             <option value="" selected>-- Choose action</option>
@@ -25,7 +19,18 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col" colspan="2">#</th>
+                <th scope="col">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="select-all">
+                        <label class="form-check-label" for="select-all">
+                            Select all
+                        </label>
+                    </div>
+                </th>
+                <th scope="col">
+                    ID
+                    {{{sortable '_id' _sort}}}
+                </th>
                 <th scope="col">
                     Name
                     {{{sortable 'name' _sort}}}
@@ -34,7 +39,7 @@
                     Price
                     {{{sortable 'price' _sort}}}
                 </th>
-                <th scope="col">
+                <th scope="col" class="hideRaw">
                     Time created
                     {{{sortable 'createdAt' _sort}}}
                 </th>
@@ -49,16 +54,15 @@
                         <input class="form-check-input" type="checkbox" name="memberIds[]" value="{{this._id}}">
                     </div>
                 </td>
-                <th scope="row">{{sum @index 1}}</th>
+                <th>{{this._id}}</th>
                 <td><a href="/members/{{this.slug}}" class="slug_hover__text">{{this.name}} </a></td>
                 <td>{{this.price}}</td>
-                <td>{{this.createdAt}}</td>
+                <td class="hideRaw">{{this.createdAt}}</td>
                 <td class="text_center"><a href="/members/{{this._id}}/edit" class="btn btn-outline-info"
                         style="margin-right: 14px;">Edit</a>
                     <a href="" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#delete_member"
                         data-bs-id="{{this._id}}">Delete</a>
                 </td>
-                {{!-- <td></td> --}}
             </tr>
             {{else}}
             <tr>
