--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -19,7 +19,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/all/uploaded/members">All Members</a></li>
                         <li><a class="dropdown-item" href="/news">News</a></li>
-                        <li><a class="dropdown-item" href="/contact">Contact</a></li>
+                        <li><a class="dropdown-item" href="/listmembers">List Members</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
