--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -106,6 +106,15 @@ a:hover{
     margin-right: 14px;
 }
 
+// css news
+
+.layout_news__img{
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+}
+
 @media screen and (max-width: 600px) {
     .hideRaw {
         display: none;
