--- a/src/resource/views/news.hbs
+++ b/src/resource/views/news.hbs
@@ -1,3 +1,49 @@
-<h1>
-    Views pages
-</h1>
+<div class="mt-2">
+    <div class="row">
+        <div class="col-9">
+            <div class="row">
+                {{#each news}}
+                <div class="col-sm-12 col-md-4 col-lg-6">
+                    <div class="card" style="width: 18rem;">
+                        <a href="/news/{{this.slug}}" class="img_link">
+                            <img src="/img/newsPost.png" class="layout_news__img" alt="...">
+                        </a>
+                        <div class="card-body">
+                            <a href="/news/{{this.slug}}" class="img_link">
+                                <h5 class="card-title">{{this.title}}</h5>
+                            </a>
+                            <p class="card-text">{{this.content}}</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+        </div>
+        <div class="col-3">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/img/newsPost.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/img/newsPost.png" class="d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/img/newsPost.png" class="d-block w-100" alt="">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
