--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -4,8 +4,9 @@
                 <!-- Section: Social media -->
                 <section class="mb-4">
                         <!-- Facebook -->
-                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998;" href="#!"
-                                role="button"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/Thangcat4walking/" class="btn btn-primary btn-floating m-1"
+                                style="background-color: #3b5998;" href="#!" role="button"><i
+                                        class="fab fa-facebook-f"></i></a>
 
                         <!-- Twitter -->
                         <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee;" href="#!"
