--- a/src/resource/views/news.hbs
+++ b/src/resource/views/news.hbs
@@ -1,48 +1,69 @@
-<div class="mt-2">
+<div class="background_container bg-image">
     <div class="row">
-        <div class="col-9">
-            <div class="row">
-                {{#each news}}
-                <div class="col-sm-12 col-md-4 col-lg-6">
-                    <div class="card" style="width: 18rem;">
-                        <a href="/news/{{this.slug}}" class="img_link">
-                            <img src="/img/newsPost.png" class="layout_news__img" alt="...">
-                        </a>
-                        <div class="card-body">
-                            <a href="/news/{{this.slug}}" class="img_link">
-                                <h5 class="card-title">{{this.title}}</h5>
-                            </a>
-                            <p class="card-text">{{this.content}}</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
+        {{#each news}}
+        <div class="col-sm-12 col-md-6 col-lg-4 mt-3">
+            <div class="card text-center text-dark bg-light">
+                <a href="/news/{{this.slug}}" class="img_link">
+                    <img src="/upload/images/{{this.image}}" class="img-fluid layout_news__img" alt="...">
+                </a>
+                <div class="card-body">
+                    <a href="/news/{{this.slug}}" class="img_link text-truncate">
+                        <h5 class="card-title text-truncate">{{this.title}}</h5>
+                    </a>
+                    <p class="card-text text-truncate">{{this.content}}</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
-                {{/each}}
             </div>
         </div>
-        <div class="col-3">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="/img/newsPost.png" class="d-block w-100" alt="">
+        {{/each}}
+        <a href="/news/create" style="display: block;">click me</a>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-7">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
                     </div>
-                    <div class="carousel-item">
-                        <img src="/img/newsPost.png" class="d-block w-100" alt="">
+                    <div class="item">
+                        <img src="/img/newsPost.png" class="img-fluid layout_news__img" alt="">
                     </div>
-                    <div class="carousel-item">
-                        <img src="/img/newsPost.png" class="d-block w-100" alt="">
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/newsPost.png" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/newsPost.png" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-5">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                fff
             </div>
         </div>
     </div>
