handle text with froala editor

--- a/src/resource/scss/_base.scss
+++ b/src/resource/scss/_base.scss
@@ -1,6 +1,9 @@
 @import 'variables';
 html{
-    font-size: 75%;
+    font-size: 100%;
+}
+a {
+    text-decoration: none;
 }
 // form select
 .form-select:focus{
