--- a/src/resource/views/postnews/createpost.hbs
+++ b/src/resource/views/postnews/createpost.hbs
@@ -9,7 +9,7 @@
         </div>
         <div class="mb-3">
             <label for="content" class="form-label">Content</label>
-            <input type="text" class="form-control" id="description" name="content">
+            <textarea name="content" id="content" rows="10" class="fr-view" class="form-control"></textarea>
         </div>
         <div class="mb-3">
             <label for="image" class="form-label">Image</label>
