--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -19,6 +19,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css" rel="stylesheet"
+        type="text/css" />
     <link rel="stylesheet" href="/css/app.css">
 </head>
 
@@ -42,6 +44,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
     integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+{{!-- froala --}}
+<script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js"></script>
 <script>
     $(document).ready(function () {
         $('.owl-carousel').owlCarousel({
@@ -51,7 +56,7 @@
             animateOut: 'slideOutDown',
             animateIn: 'flipInX',
             items: 1,
-            margin: 30,
+            margin: 45,
             stagePadding: 30,
             smartSpeed: 300, autoplay: true,
             autoplayTimeout: 3000,
@@ -65,6 +70,9 @@
         });
         $('div').removeClass('.owl-nav');
     });
+</script>
+<script>
+    new FroalaEditor('textarea');
 </script>
 
 </html>
