--- a/src/resource/views/news.hbs
+++ b/src/resource/views/news.hbs
@@ -7,56 +7,54 @@
                     <img src="/upload/images/{{this.image}}" class="img-fluid layout_news__img" alt="...">
                 </a>
                 <div class="card-body">
-                    <a href="/news/{{this.slug}}" class="img_link text-truncate">
-                        <h5 class="card-title text-truncate">{{this.title}}</h5>
+                    <a href="/news/{{this.slug}}" class="img_link">
+                        <h5 class="card-title truncate_text">{{this.title}}</h5>
                     </a>
-                    <p class="card-text text-truncate">{{this.content}}</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
         {{/each}}
-        <a href="/news/create" style="display: block;">click me</a>
     </div>
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-7">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="owl-carousel owl-theme">
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/newsPost.png" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/newsPost.png" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/newsPost.png" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/newsPost.png" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/newsPost.png" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/newsPost.png" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                     <div class="item">
-                        <img src="/img/logo.jpg" class="img-fluid layout_news__img" alt="">
+                        <img src="/img/logo.jpg" class="img-fluid layout_slide__img" alt="">
                     </div>
                 </div>
             </div>
