--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -18,7 +18,15 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/all/uploaded/members">All Members</a></li>
-                        <li><a class="dropdown-item" href="/news">News</a></li>
+                        <li>
+                            <a class="dropdown-item" href="/news">News &raquo;</a>
+                            <ul class="submenu dropdown-menu">
+                                <li><a class="dropdown-item" href="/news/create">Post news</a></li>
+                                <li style="width=100%"><a class="dropdown-item" href="/listnews/uploaded/news">List
+                                        news</a></li>
+                                <li><a class="dropdown-item" href="#">Submenu item 3</a></li>
+                            </ul>
+                        </li>
                         <li><a class="dropdown-item" href="/listmembers">List Members</a></li>
                         <li>
                             <hr class="dropdown-divider">
