--- a/src/resource/views/members/create.hbs
+++ b/src/resource/views/members/create.hbs
@@ -9,11 +9,15 @@
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <input type="text" class="form-control" id="description" name="description">
+            <textarea rows="10" class="form-control fr-view" id="description" name="description"></textarea>
         </div>
         <div class="mb-3">
             <label for="price" class="form-label">Price</label>
             <input type="string" class="form-control" id="price" name="price">
+        </div>
+        <div class="mb-3">
+            <label for="author" class="form-label">Author</label>
+            <input type="string" class="form-control" id="author" name="author">
         </div>
         <div class="mb-3">
             <label for="videoid" class="form-label">VideoID</label>
