--- a/src/resource/views/members/edit.hbs
+++ b/src/resource/views/members/edit.hbs
@@ -17,6 +17,10 @@
             <input type="string" class="form-control" value="{{member.price}}" id="price" name="price">
         </div>
         <div class="mb-3">
+            <label for="author" class="form-label">Author</label>
+            <input type="string" class="form-control" value="{{member.author}}" id="author" name="author">
+        </div>
+        <div class="mb-3">
             <label for="videoid" class="form-label">VideoID</label>
             <input type="text" class="form-control" value="{{member.videoid}}" id="videoid" name="videoid">
         </div>
