--- a/src/resource/scss/_variables.scss
+++ b/src/resource/scss/_variables.scss
@@ -2,3 +2,5 @@ $background_color: #343a40;
 $color_white: #ffff;
 $color_trans: rgba(255,255,255,.5);
 $color_dark:#151515;
+$alert_color: #ebc0b9;
+$mixin_blue: #55acee;
