--- a/src/resource/views/listmembers.hbs
+++ b/src/resource/views/listmembers.hbs
@@ -2,16 +2,15 @@
     <div class="row">
         {{#each member}}
         <div class="col-sm-6 col-lg-4">
-            <div class="card card_space__top mt-4">
+            <div class="card card_space__top mt-4" data-aos="zoom-in-down">
                 <a href="/members/{{this.slug}}" class="img_link">
-                    <img src="{{this.image}}" class="card-img-top container_img" alt="...">
+                    <img src="{{this.image}}" class="card-img-top container_img" alt="this is image">
                 </a>
                 <div class="card-body card_body__container">
                     <a href="/members/{{this.slug}}" class="">
                         <h5 class="card-title">{{this.name}}</h5>
                     </a>
                     <p class="card-text">
-                        {{this.description}}<br>
                         {{this.price}}
                     </p>
                     <a href="#" class="btn btn-primary">Buy now</a>
