--- a/src/resource/views/members/show.hbs
+++ b/src/resource/views/members/show.hbs
@@ -13,15 +13,7 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
             </div>
             <p>
-                The Best Full UPPER BODY Workout For Max Muscle Growth (Science Applied)<br>
-                About me: I'm a Canadian natural pro bodybuilder and internationally-qualified powerlifter with a BSc in
-                biochemistry/chemistry and a passion for science. I've been training for 12 years drug-free. I'm 5'5 and
-                fluctuate between 160 lbs (lean) and 180 lbs (bulked).<br>
-                Disclaimers: Jeff Nippard is not a doctor or a medical professional. Always consult a physician before
-                starting any exercise program. Use of this information is strictly at your own risk. Jeff Nippard will
-                not assume any liability for direct or indirect losses or damages that may result from the use of
-                information contained in this video including but not limited to economic loss, injury, illness or
-                death.
+                {{{member.description}}}
             </p>
         </div>
     </div>
