--- a/src/resource/views/news.hbs
+++ b/src/resource/views/news.hbs
@@ -10,7 +10,9 @@
                     <a href="/news/{{this.slug}}" class="img_link">
                         <h5 class="card-title truncate_text">{{this.title}}</h5>
                     </a>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2 text-muted">{{this.author}}</h6>
+                    </div>
                 </div>
             </div>
         </div>
@@ -61,7 +63,6 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-5">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                fff
             </div>
         </div>
     </div>
