--- a/src/resource/views/postnews/createpost.hbs
+++ b/src/resource/views/postnews/createpost.hbs
@@ -12,6 +12,10 @@
             <textarea name="content" id="content" rows="10" class="fr-view" class="form-control"></textarea>
         </div>
         <div class="mb-3">
+            <label for="author" class="form-label">Author</label>
+            <input type="string" class="form-control" id="author" name="author">
+        </div>
+        <div class="mb-3">
             <label for="image" class="form-label">Image</label>
             <input type="file" name="image" class="form-control" id="image">
         </div>
