--- a/src/resource/views/postnews/edit.hbs
+++ b/src/resource/views/postnews/edit.hbs
@@ -13,6 +13,10 @@
                 {{news.content}}</textarea>
         </div>
         <div class="mb-3">
+            <label for="author" class="form-label">Author</label>
+            <input type="string" class="form-control" value="{{news.author}}" id="author" name="author">
+        </div>
+        <div class="mb-3">
             <label for="image" class="form-label">Image</label>
             <input type="file" name="image" class="form-control" id="image">
         </div>
